--- a/app/frontend/styles/new/application.css
+++ b/app/frontend/styles/new/application.css
@@ -31,3 +31,12 @@ body {
   padding-inline: var(--container-padding-horizontal);
 }
 
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  clip-path: inset(50%);
+}
