--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   </head>
-  <body data-env="<%= Rails.env %>">
+  <body data-env="<%= Rails.env %>" data-theme="light">
     <%= render partial: '/shared/filter' %>
     <%= yield %>
     <div id="root" />
