--- a/app/frontend/routes/_auth/_auth.css
+++ b/app/frontend/routes/_auth/_auth.css
@@ -22,13 +22,15 @@
   .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
+    width: calc(100% - var(--spacing-large) * 2);
     max-width: 25rem;
     padding: var(--spacing-lg);
   }
 
   .logo {
     width: 12rem;
+    margin-inline: -1.75rem;
   }
 
   form {
@@ -38,17 +40,71 @@
   fieldset {
     display: grid;
     grid-template-columns: 1fr;
+    gap: var(--spacing-base);
     align-self: stretch;
+    margin: 0;
+    padding: 0;
+    border: 0;
+  }
+}
+
+.mantine {
+  &-Input {
+    &-wrapper {
+      --border-color: var(--border-input);
+      --focus-width: 0;
+
+      display: flex;
+      flex-direction: column;
+      grid-column: 1 / -1;
+      border-radius: var(--radius-small);
+      background: var(--background-input);
+      color: var(--text-default);
+      box-shadow: inset 0 0 0 1px var(--border-color), 0 0 0 var(--focus-width) var(--magenta-alpha-3);
+
+      &:hover {
+        --border-color: var(--border-input-hover);
+      }
+
+      &:focus-within {
+        --border-color: var(--border-input-focus);
+        --focus-width: 0.25rem;
+      }
+    }
+
+    &-input {
+      flex: 1;
+      padding-inline: calc(var(--padding-input-medium-horizontal) * 2);
+      padding-block: var(--padding-input-medium-vertical);
+      border: 0;
+      background: none;
+      color: inherit;
+      box-shadow: none;
+      outline: none;
+      font: inherit;
+      line-height: var(--line-height-medium);
+    }
   }
 
-  input {
-    padding-inline: var(--padding-input-medium-horizontal);
-    padding-block: var(--padding-input-medium-vertical);
-    border: 0;
-    border-radius: var(--radius-small);
-    background: var(--background-input);
-    box-shadow: inset 0 0 0 1px var(--border-input);
-    font: inherit;
-    line-height: var(--line-height-medium);
+  &-InputWrapper {
+    &-root {
+      display: grid;
+      grid-template-columns: auto auto;
+      gap: var(--spacing-small);
+    }
+
+
+
+    &-label,
+    &-error {
+      margin: 0;
+      color: var(--text-subtle);
+      font-size: var(--font-size-medium);
+      line-height: var(--line-height-medium);
+    }
+
+    &-error {
+      color: red;
+    }
   }
 }
