--- a/app/frontend/components/Header/Header.css
+++ b/app/frontend/components/Header/Header.css
@@ -13,6 +13,7 @@
   > .container {
     display: grid;
     grid-template: "left center right" auto / 1fr auto 1fr;
+    gap: var(--spacing-base);
     align-items: center;
   }
 
@@ -25,8 +26,9 @@
     display: flex;
     grid-area: right;
     gap: var(--spacing-base);
+    justify-content: flex-end;
     align-items: center;
-    justify-self: end;
+    justify-self: stretch;
   }
 
   h1 {
@@ -85,6 +87,54 @@
           transform: translateY(-7.25px) scale(0);
         }
       }
+    }
+  }
+
+  .search {
+    --focus-width: 0rem;
+
+    position: relative;
+    display: grid;
+    flex: 0 0 2.5rem;
+    overflow: hidden;
+    height: 2.5rem;
+    border-radius: var(--radius-round);
+    box-shadow: 0 0 0 var(--focus-width) var(--focus-ring);
+    transition: all 0.5s var(--ease-squish-3);
+
+    &:focus-within {
+      --focus-width: 0.25rem;
+
+      flex-grow: 1;
+    }
+
+    .mantine-Input {
+      &-wrapper {
+        --input-padding-inline: 0.625rem;
+        --focus-width: 0;
+
+        position: absolute;
+        inset: 0;
+        border-radius: var(--radius-round);
+        background-color: transparent;
+        transition: background-color 0.5s var(--ease-standard);
+
+        &:focus-within {
+          background-color: var(--background-input);
+        }
+      }
+
+      &-input {
+        cursor: pointer;
+
+        &:focus {
+          cursor: auto;
+        }
+      }
+    }
+
+    @media (width <= 400px) {
+      display: none;
     }
   }
 }
