--- a/app/frontend/routes/_auth/_auth.css
+++ b/app/frontend/routes/_auth/_auth.css
@@ -1,6 +1,6 @@
 .authentication {
   display: grid;
-  place-items: center;
+  grid-template: "form" 1fr / 1fr;
   min-height: 100vh;
   background: radial-gradient(
     circle at 25% 25%,
@@ -20,21 +20,32 @@
   background-blend-mode: var(--blend-mode);
 
   .container {
+    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: start;
-    width: calc(100% - var(--spacing-large) * 2);
-    max-width: 25rem;
+    grid-area: form;
+    justify-content: center;
+    align-items: center;
+    width: unset;
+    max-width: unset;
     padding: var(--spacing-lg);
+    background: var(--background-app);
+    box-shadow: var(--shadow-2xl);
   }
 
   .logo {
-    width: 12rem;
-    margin-inline: -1.75rem;
+    width: 8rem;
+    margin-left: -1.25rem;
   }
 
   form {
-    display: contents;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    max-width: 25rem;
+    padding: var(--spacing-large);
   }
 
   fieldset {
@@ -46,65 +57,13 @@
     padding: 0;
     border: 0;
   }
-}
 
-.mantine {
-  &-Input {
-    &-wrapper {
-      --border-color: var(--border-input);
-      --focus-width: 0;
-
-      display: flex;
-      flex-direction: column;
-      grid-column: 1 / -1;
-      border-radius: var(--radius-small);
-      background: var(--background-input);
-      color: var(--text-default);
-      box-shadow: inset 0 0 0 1px var(--border-color), 0 0 0 var(--focus-width) var(--magenta-alpha-3);
-
-      &:hover {
-        --border-color: var(--border-input-hover);
-      }
-
-      &:focus-within {
-        --border-color: var(--border-input-focus);
-        --focus-width: 0.25rem;
-      }
-    }
-
-    &-input {
-      flex: 1;
-      padding-inline: calc(var(--padding-input-medium-horizontal) * 2);
-      padding-block: var(--padding-input-medium-vertical);
-      border: 0;
-      background: none;
-      color: inherit;
-      box-shadow: none;
-      outline: none;
-      font: inherit;
-      line-height: var(--line-height-medium);
-    }
+  @media (width > 768px) {
+    grid-template: "form blank" 1fr / 2fr 1fr;
   }
 
-  &-InputWrapper {
-    &-root {
-      display: grid;
-      grid-template-columns: auto auto;
-      gap: var(--spacing-small);
-    }
-
-
-
-    &-label,
-    &-error {
-      margin: 0;
-      color: var(--text-subtle);
-      font-size: var(--font-size-medium);
-      line-height: var(--line-height-medium);
-    }
-
-    &-error {
-      color: red;
-    }
+  @media (width > 1280px) {
+    grid-template: "form blank" 1fr / 1fr 1fr;
   }
 }
+
