--- a/app/frontend/components/Header/Header.css
+++ b/app/frontend/components/Header/Header.css
@@ -63,32 +63,6 @@
     }
   }
 
-  [rel="menu"] {
-    g, path {
-      transition: transform 0.5s var(--ease-squish-5);
-      transform-origin: center;
-    }
-
-    &[aria-expanded] {
-      g {
-        transform: rotate(225deg);
-      }
-
-      path {
-        &:nth-child(1) {
-          transform: translateY(7.25px);
-        }
-
-        &:nth-child(2) {
-          transform: rotate(90deg);
-        }
-
-        &:nth-child(3) {
-          transform: translateY(-7.25px) scale(0);
-        }
-      }
-    }
-  }
 
   .search {
     --focus-width: 0rem;
@@ -136,5 +110,26 @@
     @media (width <= 400px) {
       display: none;
     }
+  }
+}
+
+.mantine-Menu {
+  &-dropdown {
+    position: absolute;
+    padding: var(--spacing-base);
+    border: 0;
+    border-radius: var(--radius-small);
+    background: var(--background-subtle);
+    box-shadow: var(--shadow-large);
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &-arrow {
+    z-index: -1;
+    border: 0;
+    background-color: inherit;
   }
 }
