--- a/app/frontend/styles/new/fonts.css
+++ b/app/frontend/styles/new/fonts.css
@@ -45,10 +45,14 @@ body {
   --font-size-tiny: 0.75rem;
   --font-size-small: 0.875rem;
   --font-size-medium: 1rem;
+  --font-size-large: 1.25rem;
+  --font-size-xl: 1.5rem;
 
   --line-height-tiny: 1rem;
   --line-height-small: 1.5rem;
   --line-height-medium: 1.5rem;
+  --line-height-large: 2rem;
+  --line-height-xl: 2.5rem;
 
   --font-stack: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI",
     "Helvetica Neue", "Lucida Grande", sans-serif;
