--- a/app/frontend/styles/new/application.css
+++ b/app/frontend/styles/new/application.css
@@ -29,6 +29,7 @@ body {
   width: 100%;
   max-width: var(--max-width);
   padding-inline: var(--container-padding-horizontal);
+  container-type: inline-size;
 }
 
 .visually-hidden {
