--- a/app/frontend/components/Header/Header.css
+++ b/app/frontend/components/Header/Header.css
@@ -1,135 +1,94 @@
-:root {
-  --header-height: 5rem;
-}
-
 .header {
+  --header-min-height: 15rem;
+  --header-height: var(--header-min-height);
+
   position: relative;
+  z-index: var(--z-index-header);
   display: grid;
-  place-items: center;
-  height: var(--header-height);
-  margin-bottom: -1rem;
-  padding-block-end: var(--spacing-base);
+  justify-items: center;
+  min-height: var(--header-min-height);
+  padding-top: var(--spacing-large);
+  border-bottom: var(--border-thin) solid var(--border-subtle);
+  background: var(--background-app);
+  container-type: inline-sizing;
+
+  &:has(.mantine-Tabs-root) {
+    position: sticky;
+    top: calc(1.5rem - var(--header-height));
+  }
 
   > .container {
     display: grid;
-    grid-template: "left center right" auto / 1fr auto 1fr;
-    gap: var(--spacing-base);
-    align-items: center;
+    grid-template:
+      "top" 1fr
+      "title" auto
+      "bottom" auto / auto auto;
+    grid-template-columns: 1fr;
+    gap: 0;
   }
 
-  &__left {
-    grid-area: left;
-    justify-self: start;
+  &__top-outer {
+    grid-area: top;
   }
 
-  &__right {
-    display: flex;
-    grid-area: right;
-    gap: var(--spacing-base);
-    justify-content: flex-end;
-    align-items: center;
-    justify-self: stretch;
-  }
-
-  h1 {
-    grid-area: center;
-    margin: 0;
-    color: var(--neutral-12);
-    font-weight: var(--font-weight-medium);
-    font-size: 2rem;
-
-    abbr {
-      color: var(--magenta);
-      font-weight: var(--font-weight-black);
-      text-decoration: none;
-      text-transform: lowercase;
-
-      b {
-        color: var(--neutral-12);
-        font-weight: inherit;
-      }
-    }
-  }
-
-  &__waves {
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-    pointer-events: none;
-
-    path {
-      fill: var(--pure);
-      mix-blend-mode: var(--blend-mode);
-    }
-  }
-
-
-  .search {
-    --focus-width: 0rem;
-
-    position: relative;
+  &__top {
+    position: sticky;
+    top: var(--spacing-small);
     display: grid;
-    flex: 0 0 2.5rem;
-    overflow: hidden;
-    height: 2.5rem;
-    border-radius: var(--radius-round);
-    box-shadow: 0 0 0 var(--focus-width) var(--focus-ring);
-    transition: all 0.5s var(--ease-squish-3);
-
-    &:focus-within {
-      --focus-width: 0.25rem;
-
-      flex-grow: 1;
-    }
-
-    .mantine-Input {
-      &-wrapper {
-        --input-padding-inline: 0.625rem;
-        --focus-width: 0;
-
-        position: absolute;
-        inset: 0;
-        border-radius: var(--radius-round);
-        background-color: transparent;
-        transition: background-color 0.5s var(--ease-standard);
-
-        &:focus-within {
-          background-color: var(--background-input);
-        }
-      }
-
-      &-input {
-        cursor: pointer;
-
-        &:focus {
-          cursor: auto;
-        }
-      }
-    }
-
-    @media (width <= 400px) {
-      display: none;
-    }
+    grid-template: "breadcrumbs actions" auto / auto auto;
+    gap: var(--spacing-large);
+    align-items: center;
+    min-height: 2.5rem;
   }
-}
 
-.mantine-Menu {
-  &-dropdown {
-    position: absolute;
-    padding: var(--spacing-base);
-    border: 0;
-    border-radius: var(--radius-small);
-    background: var(--background-subtle);
-    box-shadow: var(--shadow-large);
+  &__middle {
+    grid-area: middle;
+    margin-bottom: var(--spacing-base);
+  }
 
-    &:focus {
-      outline: none;
+  &__bottom-outer {
+    grid-area: bottom;
+    margin-inline: calc(var(--container-padding-horizontal) * -1);
+    margin-bottom: calc(var(--border-thin) * -1);
+    padding-inline: var(--container-padding-horizontal);
+  }
+
+  &__actions {
+    grid-area: actions;
+    justify-self: end;
+  }
+
+  &__title {
+    grid-area: title;
+    margin-bottom: var(--spacing-base);
+    container-type: inline-sizing;
+
+    h1 {
+      margin: 0;
+      font-weight: var(--font-weight-medium);
+      font-size: clamp(2rem, 8cqw, 3rem);
+      line-height: 1.2;
     }
   }
 
-  &-arrow {
-    z-index: -1;
-    border: 0;
-    background-color: inherit;
+  &__breadcrumbs {
+    display: flex;
+    flex-wrap: wrap;
+    grid-area: breadcrumbs;
+    gap: 1ch;
+    align-items: center;
+
+    a {
+      color: var(--text-subtle);
+      text-decoration: none;
+
+      &:hover {
+        color: var(--text-default);
+      }
+    }
+
+    .icon {
+      color: var(--border-subtle);
+    }
   }
 }
