--- a/app/frontend/styles/new/variables.css
+++ b/app/frontend/styles/new/variables.css
@@ -238,6 +238,7 @@
 
 :root {
   --border-thin: 0.0625rem;
+  --border-thick: 0.25rem;
   --icon-small: 1rem;
   --icon-medium: 1.25rem;
   --icon-large: 1.5rem;
@@ -274,6 +275,7 @@ body,
   --icon: var(--text-subtle);
   --background-app: var(--neutral-1);
   --background-element: var(--neutral-3);
+  --background-element-hover: var(--neutral-4);
   --background-input: var(--background-app);
   --background-inverse: var(--neutral-12);
   --background-solid: var(--neutral-9);
@@ -283,7 +285,7 @@ body,
   --border-input-hover: var(--neutral-alpha-8);
   --border-input-focus: var(--magenta-8);
   --border-input: var(--border-element);
-  --border-subtle: var(--neutral-alpha-3);
+  --border-subtle: var(--neutral-alpha-6);
   --magenta: var(--magenta-9);
 }
 
@@ -404,10 +406,15 @@ body,
 
 :root {
   --max-width: 64rem;
-  --container-padding-horizontal: var(--spacing-medium);
+  --container-padding-horizontal: var(--spacing-large);
 
   @media only screen and (width <= 500px) {
     --max-width: 25rem;
     --container-padding-horizontal: var(--spacing-medium);
   }
+}
+
+:root {
+  --z-index-header: 10;
+  --z-index-navigation: 20;
 }
