--- a/app/frontend/components/Footer/Footer.css
+++ b/app/frontend/components/Footer/Footer.css
@@ -15,6 +15,16 @@
     padding-block-start: var(--spacing-base);
     padding-block-end: 4rem;
 
+    @media (width <= 768px) {
+      grid-template-columns: 1fr 1fr;
+      gap: var(--spacing-base);
+      padding-block-end: 3rem;
+
+      section:last-child {
+        grid-column: 1 / -1;
+      }
+    }
+
     @media (width <= 500px) {
       grid-template-columns: 1fr;
       gap: var(--spacing-base);
@@ -23,8 +33,6 @@
   }
 
   section {
-    padding-inline: var(--container-padding-horizontal);
-
     a {
       display: block;
       color: inherit;
