--- a/app/frontend/components/Button/Button.css
+++ b/app/frontend/components/Button/Button.css
@@ -8,10 +8,12 @@
   --button-border-radius: var(--radius-small);
   --button-padding-block: var(--padding-button-medium-vertical);
   --button-padding-inline: var(--padding-button-medium-horizontal);
+  --button-gap: 0;
   --button-line-height: var(--line-height-medium);
   --button-font-size: var(--font-size-medium);
 
   display: flex;
+  gap: var(--button-gap);
   justify-content: center;
   align-items: center;
   min-width: calc(var(--button-padding-inline) * 2 + 1lh);
@@ -96,6 +98,8 @@
   &[data-size="small"] {
     --button-padding-block: var(--padding-button-small-vertical);
     --button-padding-inline: var(--padding-button-small-horizontal);
+    --button-gap: var(--spacing-tiny);
+    --button-font-size: var(--font-size-small);
   }
 
   &[data-size="large"] {
