--- a/app/frontend/styles/new/application.css
+++ b/app/frontend/styles/new/application.css
@@ -3,6 +3,11 @@
 @import url("@/styles/new/shadows.css");
 
 :root {
+  --theme-transition-speed: 0.5s;
+  --theme-transition:
+    background-color var(--theme-transition-speed) var(--ease-standard),
+    color var(--theme-transition-speed) var(--ease-standard);
+
   color-scheme: light dark;
   font-synthesis: none;
   text-rendering: optimizelegibility;
@@ -24,6 +29,7 @@ body {
   background-color: var(--background-app);
   color: var(--text-default);
   font-family: "DIN Round Pro", sans-serif;
+  transition: var(--theme-transition);
 }
 
 .container {
