--- a/app/frontend/components/atoms/TextInput/TextInput.css
+++ b/app/frontend/components/atoms/TextInput/TextInput.css
@@ -17,7 +17,7 @@
       border-radius: var(--input-border-radius);
       background: var(--background-input);
       color: var(--text-default);
-      box-shadow: inset 0 0 0 1px var(--border-color), 0 0 0 var(--focus-width) var(--focus-ring);
+      box-shadow: inset 0 0 0 var(--border-thin) var(--border-color), 0 0 0 var(--focus-width) var(--focus-ring);
 
       &:hover {
         --border-color: var(--border-input-hover);
