--- a/app/frontend/styles/new/variables.css
+++ b/app/frontend/styles/new/variables.css
@@ -244,6 +244,7 @@
   --icon-small: 1rem;
   --icon-medium: 1.25rem;
   --icon-large: 1.5rem;
+  --icon-huge: 4rem;
   --avatar-small: 1.5rem;
   --avatar-medium: 2.5rem;
   --avatar-large: 3rem;
@@ -258,6 +259,7 @@
   --padding-input-small-vertical: var(--spacing-tiny);
   --padding-input-small-horizontal: var(--spacing-small);
   --radius-small: 0.25rem;
+  --radius-medium: 0.5rem;
   --radius-large: 1rem;
   --radius-round: 100vmax;
   --radius-input-medium: var(--radius-small);
@@ -276,6 +278,7 @@ body,
   --text-subtle: var(--neutral-11);
   --icon: var(--text-subtle);
   --background-app: var(--neutral-1);
+  --background-translucent: hsla(240 20% 99% / 0.85);
   --background-element: var(--neutral-3);
   --background-element-hover: var(--neutral-4);
   --background-input: var(--background-app);
@@ -290,6 +293,10 @@ body,
   --border-input: var(--border-element);
   --border-subtle: var(--neutral-alpha-6);
   --magenta: var(--magenta-9);
+}
+
+[data-theme="dark"] {
+  --background-translucent: hsla(240 6% 7% / 0.85);
 }
 
 body,
@@ -417,7 +424,7 @@ body,
   --max-width: 64rem;
   --container-padding-horizontal: var(--spacing-large);
 
-  @media only screen and (width <= 500px) {
+  @media only screen and (max-width: 500px) {
     --max-width: 25rem;
     --container-padding-horizontal: var(--spacing-medium);
   }
@@ -426,4 +433,5 @@ body,
 :root {
   --z-index-header: 10;
   --z-index-navigation: 20;
+  --z-index-modal: 100;
 }
