--- a/app/frontend/components/organisms/Navigation/Navigation.css
+++ b/app/frontend/components/organisms/Navigation/Navigation.css
@@ -6,7 +6,8 @@
   position: relative;
   z-index: var(--z-index-navigation);
   display: grid;
-  place-items: center;
+  grid-template-columns: subgrid;
+  grid-column: full-bleed;
   height: var(--navigation-height);
   margin-bottom: -1rem;
   padding-block-end: var(--spacing-base);
@@ -14,8 +15,11 @@
   > .container {
     display: grid;
     grid-template: "left center right" auto / 1fr auto 1fr;
+    grid-row: 1;
+    grid-column: main;
     gap: var(--spacing-base);
     align-items: center;
+    padding-bottom: var(--spacing-base);
   }
 
   &__left {
@@ -58,9 +62,8 @@
   }
 
   &__waves {
-    position: absolute;
-    inset: 0;
-    z-index: -1;
+    grid-row: 1;
+    grid-column: full-bleed;
     width: 100%;
     height: var(--navigation-height);
     pointer-events: none;
