--- a/app/frontend/components/pages/Home/Home.css
+++ b/app/frontend/components/pages/Home/Home.css
@@ -1,19 +1,3 @@
-.container {
-  container-type: inline-size;
-}
-
-.layout__main {
-  &:has(.hero) {
-    display: grid;
-    align-items: center;
-    align-self: stretch;
-
-    .container {
-      margin: 0 auto;
-    }
-  }
-}
-
 .hero {
   @container (max-width: 768px) {
     &.hero {
@@ -69,6 +53,7 @@
   grid-template: "title buttons" 1fr "dates buttons" auto / 1fr 1fr;
   row-gap: 0;
   align-items: end;
+  align-self: center;
   max-width: 50rem;
   margin: 0 auto;
   padding-block: 4rem;
@@ -150,4 +135,8 @@
       --button-line-height: 2rem;
     }
   }
+}
+
+.layout__main:has(.hero) {
+  align-content: stretch;
 }
